frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: frigate
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: rtmp
    port: 1935
    protocol: TCP
    targetPort: rtmp
  selector:
    name: frigate
